# blink-md

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cargo.toml.patch  DESIGN.md  GEMINI.md  IDENTITY.md  IMPLEMENTATION.md  LEARN.md  Makefile  PLAN.md  README.md  SPEC.md  TODO.md  TODO_RESTORE.md  UX_CRITIQUE.md  build.rs
.agents/skills/mcp-testing/references/: api_reference.md
.claude/: MEMORY.md  settings.json
.claude/hooks/: add-memory.py  add-memory.sh  bootstep-memory.sh  hooks.json
.claude/memory/: session-2026-07-01.md  session-2026-07-02.md  session-215004.md
.claude/reference/: api-comparison.md  cloud-api-reference.md
.claude/skills/add-memory/: MEMORY.md  SKILL.md
.claude/skills/add-memory/scripts/: add-memory.py  add-memory.sh
.claude/skills/add-memory/templates/: MEMORY.md  session.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  label-definitions.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  cla.yml  coverage.yml  cross-platform.yml  generate-skills.yml  labeler.yml  npm-publish.yml  policy.yml  publish-skills.yml  release-changesets.yml  release.yml  rust-ci.yml  stale.yml  sync-labels.yml
.hermes/: hooks.json
.qwen/: settings.json  settings.json.orig
.qwen/skills/skill-example-generator/: SKILL.md
assets/css/: tokens.css
db/: README.md  schema.sql
docs/: AGENTS.md  ARCHITECTURE.md  ARCHIVED.md  IDENTITY.md  IMPLEMENTATION.md  LEARN.md  PLAN.md  QUICKSTART.md  SPEC.md  UX_CRITIQUE.md
docs/mcp/conductor/: analytical-mcp-plan.md
docs/mcp/prompts/: enhanced_markdown_specification.md
docs/mcp/resources/: view_configuration_dsl.md
docs/mcp/tools/: index.json  jules-mcp-server.json  lark-mcp-server.json  md-mcp-server.json  mmd-mcp-server.json  notion-mcp-server.json
mcp/prompts/: enhanced_markdown_specification.md
npm/: .npmignore  install.js  package.json
scripts/: bump-version.sh  check-package-hygiene.py  increment-version.sh  install.ps1  install.sh  pre-commit  setup.sh  setup_tool.sh
skills/: INDEX.md
skills/persona-designer/: SKILL.md
skills/persona-developer/: SKILL.md
skills/persona-researcher/: SKILL.md
skills/persona-technical-writer/: SKILL.md
skills/recipe-blog-workflow/: SKILL.md
skills/recipe-code-documentation/: SKILL.md
skills/recipe-collect-data/: SKILL.md
skills/recipe-convert-markdown/: SKILL.md
skills/recipe-data-migration/: SKILL.md
skills/recipe-design-system-docs/: SKILL.md
skills/recipe-export-archive/: SKILL.md
skills/recipe-generate-diagrams/: SKILL.md
skills/recipe-meeting-notes/: SKILL.md
skills/recipe-onboarding-docs/: SKILL.md
skills/recipe-project-tracker/: SKILL.md
skills/recipe-sync-docs/: SKILL.md
skills/recipe-technical-spec/: SKILL.md
src/: client.rs  error.rs  lib.rs  main.rs
src/api/: blocks.rs  comments.rs  databases.rs  files.rs  markdown.rs  markdown_frontmatter.rs  mod.rs  pages.rs  search.rs  trash.rs  users.rs  views.rs  webhooks.rs
src/cli/: convert.rs  diff.rs  export_cmd.rs  mcp.rs  mod.rs  output.rs  sync_cmd.rs  syntax_highlight.rs  theme.rs  tui.rs
src/cli/themes/: catppuccin-mocha.json  dracula.json  github-dark.json  github-light.json  gruvbox-dark.json  gruvbox-light.json  monokai.json  node-dark.json  node.json  nord.json  notion.json  one-dark.json  solarized-dark.json  solarized-light.json  tokyo-night.json
src/converter/: github_markdown.rs  lark_sheets.rs  markdown.rs  markdown_frontmatter.rs  mod.rs  notion.rs
src/ir/: blocks.rs  frontmatter.rs  inline.rs  metadata.rs  mod.rs  style.rs  table.rs
src/mcp/: core.rs  mod.rs  server.rs
src/mcp/core/: Cargo.toml
src/mcp/core/src/: lib.rs
src/mcp/jules/: .gitignore  ANTI_SLOP_FIRST_RUN_REPORT.md  CHANGELOG.md  Cargo.toml  GEMINI.md  README.md  TODO.md  plan.md  setup.ps1
src/mcp/jules/conductor/tracks/agent-doctor/: plan.md
src/mcp/jules/conductor/tracks/agent-learning-loop/: plan.md
src/mcp/jules/conductor/tracks/hermes-cron-dashboard/: plan.md
src/mcp/jules/conductor/tracks/hermes-integration/: plan.md
src/mcp/jules/conductor/tracks/memory-protocol/: plan.md
src/mcp/jules/docs/: AGENT_SKILLS_STANDARD.md  CONTEXT_FILE_PROTOCOL.md  HERMES_RESEARCH.md  MASTER_TECH_STACK.md  MEMORY_RULES.md  RESEARCH_ACP_A2A.md  SPEC.md  STAGING_REVIEW_PROTOCOL.md  TECH_STACK_INVENTORY.md  TECH_STACK_WHY.md
src/mcp/jules/docs/reports/: CRON_DASHBOARD.md
src/mcp/jules/docs/research/: modal_best_practices.md
src/mcp/jules/scripts/: agent_dashboard.py
src/mcp/jules/shared_memory/handoff/: jules_to_hermes.json
src/mcp/jules/skills/mcp-testing/: SKILL.md
src/mcp/jules/skills/mcp-testing/scripts/: mcp_test_client.py
src/mcp/jules/src/: main.rs
src/mcp/jules/tests/: integration_test.py  test_intent_optimizer.py  validate_hooks.sh
src/mcp/lark/: Cargo.toml
src/mcp/lark/src/: main.rs
src/mcp/md/: Cargo.toml
src/mcp/md/src/: main.rs
src/mcp/mmd/: Cargo.toml
src/mcp/mmd/src/: main.rs
src/mcp/mmd/tests/: integration_test.rs
src/mcp/notion/: Cargo.toml
src/mcp/notion/src/: main.rs
src/mcp/tools/: lark.rs  markdown.rs  mermaid.rs  mod.rs  notion.rs  notion_live.rs
src/models/: block.rs  common.rs  database.rs  datasource.rs  db.rs  mod.rs  page.rs  view.rs
src/registry/: personas.toml  recipes.toml
src/sync/: builder.rs  error.rs  generate_skills.rs  id_mapper.rs  json_schema.rs  mod.rs  schema.rs
tests/: frontmatter_properties.rs  integration_tests.rs  ir_roundtrip.rs  markdown_export.rs  markdown_frontmatter.rs  markdown_frontmatter_converter.rs  markdown_import.rs  md_mcp_integration.rs  model_tests.rs  platform_compatibility.rs  version_compliance.rs
tooling/conductor-archive/: schema-plan.md
tooling/conductor-archive/tracks/auto-setup-env/: plan.md
tooling/conductor-archive/tracks/cli-unification/: plan.md
tooling/jules/: setup.sh
tooling/jules/conductor/: tracks.md
tooling/jules/docs/: ARCHITECTURE_OVERVIEW.md
tooling/jules/scripts/: agent_doctor.py  cron_reporter.py  jules_api_bridge.py  memory_guard.sh
tooling/jules/tests/: run_tests.sh
(+11 files in other folders)
