[package]
name = "notion-rs"
version = "0.1.0"
edition = "2021"
description = "Unofficial Notion API SDK for Rust (version 2026-03-11)"
license = "MIT"

[dependencies]
reqwest = { version = "0.13", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.45", features = ["serde"] }
uuid = { version = "1.23", features = ["serde", "v4"] }
tokio = { version = "1.52", features = ["full"] }
thiserror = "2.0"
clap = { version = "4.6", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"
anyhow = "1.0"
tokio-util = "0.7.18"
tokio-retry = "0.3"
governor = "0.10"
futures = "0.3"
pulldown-cmark = "0.13"
notify = "8"
similar = "3"
scraper = "0.27"
lopdf = "0.40"
docx-rs = "0.4"
google-docs1 = "7"
yup-oauth2 = "12.1"

pmcp = { version = "2.9", optional = true }

[features]
default = []
mcp = ["pmcp"]

[dev-dependencies]
tokio = { version = "1.52", features = ["full", "rt"] }
wiremock = "0.6"
