[package]
name = "blink-md"
version = "0.3.0"
edition = "2021"
description = "Unofficial Notion API SDK for Rust (version 2026-03-11)"
license = "MIT"

[workspace]
members = [".", "src/mcp/core", "src/mcp/jules", "src/mcp/mmd", "src/mcp/md"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
pmcp = "2.9"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "allow", priority = -1 }
missing_errors_doc = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
uninlined_format_args = "allow"
wildcard_imports = "allow"
items_after_statements = "allow"
too_many_arguments = "allow"
needless_pass_by_value = "allow"

[dependencies]
reqwest = { version = "0.13", features = ["json", "multipart"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4.45", features = ["serde"] }
uuid = { version = "1.23", features = ["serde", "v4"] }
tokio = { workspace = true }
thiserror = { workspace = true }
clap = { version = "4.6", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"
anyhow = { workspace = true }
tokio-util = "0.7.18"
tokio-retry = "0.3"
governor = "0.10"
futures = "0.3"
pulldown-cmark = "0.13"
notify = "8"
similar = "3"
scraper = "0.27"
lopdf = "0.40"
docx-rs = "0.4"
google-docs1 = "7"
yup-oauth2 = "12.1"
syntect = { version = "5", features = ["default"] }
async-trait = "0.1"
mcp-core = { path = "src/mcp/core" }

pmcp = { workspace = true, optional = true }
unicode-width = "0.1"
unicode-segmentation = "1.12"

[features]
default = []
mcp = ["pmcp"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt"] }
wiremock = "0.6"

[lints]
workspace = true
