[package]
name = "blink-md"
version = "0.4.1"
edition = "2021"
default-run = "blink-md"
description = "High-performance Notion document sync and conversion engine with Universal IR support for Markdown, Lark, Sheets, and more."
license = "MIT"
repository = "https://github.com/billlzzz26/blink-md"
homepage = "https://github.com/billlzzz26/blink-md"
documentation = "https://docs.rs/blink-md"
readme = "README.md"
keywords = ["notion", "markdown", "tui", "mcp", "lark"]
categories = ["command-line-utilities", "asynchronous", "parsing"]
exclude = ["conductor/*", "docs/mcp/conductor/*", ".gemini/*", ".qwen/*", ".git/*", "tooling/*"]

# Single-crate project. The `[workspace]` table is kept only so the package
# can share `workspace.dependencies` and `workspace.lints` with itself — there
# are no sub-crates. The per-platform MCP servers were merged into the
# `blink-md-mcp` binary (feature `mcp`); the Jules/Hermes agent tooling now
# lives under `tooling/jules`, outside the build.
[workspace]
members = ["."]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
pmcp = "2.10"
chrono = { version = "0.4", features = ["serde"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "allow", priority = -1 }
missing_errors_doc = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
uninlined_format_args = "allow"
wildcard_imports = "allow"
items_after_statements = "allow"
too_many_arguments = "allow"
needless_pass_by_value = "allow"

[dependencies]
reqwest = { version = "0.13", features = ["json", "multipart"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.23", features = ["serde", "v4"] }
tokio = { workspace = true }
thiserror = { workspace = true }
clap = { version = "4.6", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"
anyhow = { workspace = true }
tokio-util = "0.7.18"
tokio-retry = "0.3"
governor = "0.10"
futures = "0.3"
pulldown-cmark = "0.13"
notify = "8"
similar = "3"
scraper = "0.27"
lopdf = "0.40"
docx-rs = "0.4"
google-docs1 = "7"
yup-oauth2 = "12.1"
syntect = { version = "5", features = ["default"] }
async-trait = "0.1"
unicode-width = "0.1"
unicode-segmentation = "1.12"
self_update = { version = "0.41", default-features = false, features = ["rustls"] }
csv = "1.3"
feishu-sdk = "0.1"
toml = "1.1"
serde_yaml = "0.9"

# --- MCP server (`blink-md-mcp` binary), behind the `mcp` feature ---
pmcp = { workspace = true, optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
mermaid-rs-renderer = { version = "0.2", optional = true }

[features]
default = []
mcp = ["dep:pmcp", "dep:tracing", "dep:tracing-subscriber", "dep:mermaid-rs-renderer"]

[[bin]]
name = "blink-md"
path = "src/main.rs"

[[bin]]
name = "blink-md-mcp"
path = "src/bin/blink-md-mcp.rs"
required-features = ["mcp"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt"] }
wiremock = "0.6"

[lints]
workspace = true