[package]
name = "mcp-core"
version = "0.2.1"
edition = "2021"
description = "Shared utilities for blink-md MCP servers"

[dependencies]
pmcp = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
