[package]
name = "jules-mcp-server"
version = "0.3.1"
edition = "2021"
description = "MCP server for Jules AI agent and Hermes bridge"

[[bin]]
name = "jules-mcp-server"
path = "src/main.rs"

[dependencies]
mcp-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
tracing = "0.1"

[lints]
workspace = true
