[package]
name = "md-mcp-server"
version = "0.2.1"
edition = "2021"
description = "MCP server for Markdown operations (Notion-flavored, GFM)"

[[bin]]
name = "md-mcp-server"
path = "src/main.rs"

[dependencies]
mcp-core = { path = "../core" }
blink-md = { path = "../../.." }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
tracing = "0.1"

[lints]
workspace = true
