[package]
name = "mmd-mcp-server"
version = "0.1.1"
edition = "2021"
description = "MCP server for Mermaid diagram rendering using mermaid-rs-renderer"

[[bin]]
name = "mmd-mcp-server"
path = "src/main.rs"

[dependencies]
mcp-core = { path = "../core" }
mermaid-rs-renderer = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
tracing = "0.1"

[lints]
workspace = true
