[package]
name = "notion-mcp-server"
version = "0.4.1"
edition = "2021"
description = "MCP server for Notion API operations and Universal IR conversion"

[[bin]]
name = "notion-mcp-server"
path = "src/main.rs"

[dependencies]
mcp-core = { path = "../core" }
blink-md = { path = "../../.." }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
tracing = "0.1"
chrono = { workspace = true }

[lints]
workspace = true